# mycelium

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN-MCP-SERVER.md  README.md  config.json  package-lock.json  package.json  setup-env.sh
.claude/: settings.local.json
.claude/hooks/: mycelium-hook.mjs  subagent-role-hook.mjs
aegis-rust/: Cargo.toml
aegis-rust/crates/a2a/: Cargo.toml
aegis-rust/crates/a2a/src/: identity_resolver.rs  lib.rs  types.rs
aegis-rust/crates/aegis-adapter/: Cargo.toml
aegis-rust/crates/aegis-adapter/src/: lib.rs
aegis-rust/crates/aegis-adapter/src/controller/: mod.rs
aegis-rust/crates/aegis-adapter/src/gateway/: mod.rs
aegis-rust/crates/aegis-adapter/src/repository/: in_memory.rs  mod.rs
aegis-rust/crates/aegis-app/: Cargo.toml
aegis-rust/crates/aegis-app/src/: main.rs
aegis-rust/crates/aegis-domain/: Cargo.toml
aegis-rust/crates/aegis-domain/src/: lib.rs
aegis-rust/crates/aegis-domain/src/model/: agent.rs  artifact.rs  mission.rs  mod.rs  role.rs  skill.rs
aegis-rust/crates/aegis-domain/src/repository/: agent_repository.rs  mission_repository.rs  mod.rs
aegis-rust/crates/aegis-domain/src/service/: game_loop.rs  mod.rs
aegis-rust/crates/aegis-usecase/: Cargo.toml
aegis-rust/crates/aegis-usecase/src/: lib.rs
aegis-rust/crates/audit/: Cargo.toml
aegis-rust/crates/audit/src/: audit_logger.rs  lib.rs  rate_limiter.rs
aegis-rust/crates/cli/: Cargo.toml
aegis-rust/crates/cli/src/: interactive.rs  lib.rs  main.rs
aegis-rust/crates/cli/src/commands/: init.rs  mcp.rs  mod.rs  policy.rs  skill.rs
aegis-rust/crates/core/: Cargo.toml
aegis-rust/crates/core/src/: aegis_router_core.rs  lib.rs
aegis-rust/crates/gateway/: Cargo.toml
aegis-rust/crates/gateway/src/: lib.rs  stdio_router.rs
aegis-rust/crates/rbac/: Cargo.toml
aegis-rust/crates/rbac/src/: lib.rs  role_manager.rs  role_memory.rs  tool_visibility.rs
aegis-rust/crates/shared/: Cargo.toml
aegis-rust/crates/shared/src/: config.rs  error.rs  lib.rs  role.rs  skill.rs  tool.rs
aegis-rust/crates/skills/: Cargo.toml
aegis-rust/crates/skills/src/: lib.rs  loader.rs
docs/: claude-code-hooks.md  claude-desktop-integration.md  cursor-integration.md  mcp-integration-analysis.md
roles/: aegis-roles.json
src/: agent.ts  api-server.ts  check-auth.ts  cli.ts  mcp-client.ts  mcp-server.ts  sub-agent.ts
src/mcp/: index.ts  stdio-router.ts
src/router/: aegis-router-core.ts  index.ts  role-config.ts  role-manager.ts  router-adapter.ts
src/types/: mcp-types.ts  router-types.ts
tests/: e2e-role-switching.test.ts  real-e2e.test.ts  role-config.test.ts  role-manager.test.ts  role-switching.test.ts  skill-integration.test.ts  tool-filtering.test.ts  tool-visibility-manager.test.ts
