[workspace]
resolver = "2"
members = [
    "crates/aegis-domain",
    "crates/aegis-usecase",
    "crates/aegis-adapter",
    "crates/aegis-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shingo <shin0205go@gmail.com>"]
license = "MIT"
repository = "https://github.com/Shin0205go/Aegis-cli"

[workspace.dependencies]
# Domain layer - zero external dependencies
# Usecase layer
aegis-domain = { path = "crates/aegis-domain" }

# Adapter layer
aegis-usecase = { path = "crates/aegis-usecase" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# App layer
aegis-adapter = { path = "crates/aegis-adapter" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
