[package]
name = "a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS A2A - Agent-to-Agent Identity Resolution"

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
