[package]
name = "aegis-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS Adapter Layer - External system integrations"

[dependencies]
aegis-domain.workspace = true
aegis-usecase.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
