[package]
name = "aegis-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS Application - Main entry point and DI wiring"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-domain.workspace = true
aegis-usecase.workspace = true
aegis-adapter.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
