[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS Core - Integration layer with AegisRouterCore"

[dependencies]
shared.workspace = true
rbac.workspace = true
a2a.workspace = true
audit.workspace = true
gateway.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
