[package]
name = "rbac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS RBAC - Role-Based Access Control"

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
glob.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
