[package]
name = "skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AEGIS Skills - Skill MCP Server"

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
glob.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
